--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -42,7 +42,7 @@ en:
   products:
     index:
       title: "Products"
-      add: "Add to Cart"
+      add_html: "Add to Cart"
 
   carts:
     cart:
@@ -50,4 +50,11 @@ en:
       empty: "Empty Cart"
       checkout: "Checkout"
 
-    
+  number:
+    currency: 
+      format:
+        unit: "$"
+        precision: 2
+        separator: "."
+        delimiter: ","
+        format: "%u%n"
