--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -58,3 +58,16 @@ en:
         separator: "."
         delimiter: ","
         format: "%u%n"
+
+  orders:
+    new:
+      legend: "Please enter your detais"
+    form:
+      name: "Name"
+      address: "Address"
+      email: "Email"
+      pay_type: "Pay with"
+      pay_prompt_html: "Select payment method"
+      submit: "Place an order"
+
+
