--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -98,3 +98,32 @@ ru:
         name: "Имя"  
         email: "Емейл"
         pay_type: "Способ оплаты"
+
+  main:
+    home:
+      aboutus: "О нас"
+      p_about: "Мы давно и успешно занимаемся изготовлением рекламной продукции и блистерной упаковки.
+                Наш опыт и оборудование позволяют предложить вам упаковку и POS-материалы, которые 
+                будут наилучшим образом сохранять, демонстрировать и продавать вашу продукцию.
+                Мы всегда с радостью отмечаем, как растут продажи наших покупателей"
+      2_gallery: "Галерея"
+      2_gallery_p: "Найдите свое дизайнерское решение"
+      toc1: "Обслуживание клиентов"
+      toc2: "Лучшие цены"
+      toc3: "Доставка"
+      toc4: "Изготовление пилотного образца"
+      popup: "Пластиковая упаковка: ланч-боксы"
+      qview: "Быстрый просмотр"
+      shelf: "Шелфтокер"
+      lunch: "Ланч-бокс"
+      clam: "Блистер"
+      mold: "Формованный раздатчик"
+      suchi: "Суши-бокс"
+      stand: "Акриловая подставка"
+      display: "Акриловый дисплей"
+
+    services:
+      s_title: "Услуги" 
+      p_text: "Мы предоставляем нашим клиентам услуги по графическому дизайну и допечатной подготовке, 3d моделированию 
+               и рендерингу, конструкторскому 3D-моделированию (SolidWorks), моделированию прессформ. Предоставляем 
+               образцы продукции по требованию ( в зависимости от вида продукции)."
