--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -121,6 +121,12 @@ ru:
       suchi: "Суши-бокс"
       stand: "Акриловая подставка"
       display: "Акриловый дисплей"
+      seemore: "Больше фото"
+      2_gallery_s: "Новое в галерее "
+      chocolate: "Формованная подставка под шоколад двух типов, с шелкотрафаретной печатью золотом"
+      blog: "Наш блог"
+      socialm: "Мы в соцсетях "
+      socialc: " Посетите нашу страницу "
 
     services:
       s_title: "Услуги" 
