--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -101,6 +101,9 @@ ru:
 
   main:
     home:
+      carousel1: "Ланч-боксы"
+      carousel2: "Суши-боксы"
+      carousel3: "Формованные треи"
       aboutus: "О нас"
       p_about: "Мы давно и успешно занимаемся изготовлением рекламной продукции и блистерной упаковки.
                 Наш опыт и оборудование позволяют предложить вам упаковку и POS-материалы, которые 
@@ -127,6 +130,19 @@ ru:
       blog: "Наш блог"
       socialm: "Мы в соцсетях "
       socialc: " Посетите нашу страницу "
+      trade: "Торговое оборудование"
+      tradeblog: "Мы занимаемся производством торгового оборудования и рекламной продукции порядка 12 лет, используя различные технологии работы с пластиком и брендирования"
+      package: "Изготовление блистерной упаковки под заказ"
+      package_p: "Мы имеем большой опыт в изготовлении упаковки для продуктов, кондитерских изделий, промтоваров, бытовой химии, электротехники, крепежа из ПЭТ, ПВХ, ПП, ПС толщиной 0,2 - 2 мм. Все возможные виды пластиковой упаковки мы производим под заказ: разрабатываем 3d-модель блистера, подбираем материал и его толщину, изготавливаем пресс-форму и тираж упаковки."
+      read: "Узнать больше"
+      pages: "Страницы"
+      addresses: "Адреса"
+      contactus: "Свяжитесь с нами"
+      user_section: "Пользовательский раздел"
+      catalog: "Каталог  "
+      subscription: "Новостная рассылка"
+      subsmail: "Ваш e-mail"
+      subscribe: "Подписаться"
 
     services:
       s_title: "Услуги" 
