--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -149,3 +149,20 @@ ru:
       p_text: "Мы предоставляем нашим клиентам услуги по графическому дизайну и допечатной подготовке, 3d моделированию 
                и рендерингу, конструкторскому 3D-моделированию (SolidWorks), моделированию прессформ. Предоставляем 
                образцы продукции по требованию ( в зависимости от вида продукции)."
+  
+  users:
+    registrations:
+      edit:
+        edit_user: "Редактировать профиль"
+        email: "email"
+        password: "Пароль"
+        leave: "Оставьте пустым, если не хотите менять"
+        characters: " символов минимум"
+        password_confirmation: "подтверждение пароля"
+        current_password: "Текущий пароль "
+        we_need: "подтвердите свои изменения с помощью пароля"
+        image: "Изображение"
+        update: "Редактировать"
+        cancel: "Удалить мой аккаунт"
+        unhappy: "Точно?"
+        back: "Назад"
