--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -89,6 +89,16 @@ en:
       pay_prompt_html: "Select payment method"
       submit: "Place an order"
 
+  activerecord:
+    models:
+      order: "Order"
+    attributes:
+      order: 
+        address: "Address" 
+        name: "Name"  
+        email: "Email"
+        pay_type: "Payment method"
+
   main:
     home:
       carousel1: "Lunch-boxes"
@@ -137,6 +147,19 @@ en:
       s_title: "Services" 
       p_text: "We supply our customers with graphic design including preprinting works, 3d rendering, constructional 3d modelling with drawings (SolidWorks), molding tool modelling, product samples on demand ( depending on a product). "
 
-
-
-
+  users:
+    registrations:
+      edit:
+        edit_user: "Edit User's Profile"
+        email: "email"
+        password: "Password"
+        leave: "leave blank if you don't want to change it"
+        characters: " characters minimum"
+        password_confirmation: "password_confirmation"
+        current_password: "Current password "
+        we_need: "we need your current password to confirm your changes"
+        image: "image"
+        update: "Update"
+        cancel: "Cancel my account"
+        unhappy: "Unhappy? "
+        back: "Back"
