--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,33 +1,4 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# The following keys must be escaped otherwise they will not be retrieved by
-# the default I18n backend:
-#
-# true, false, on, off, yes, no
-#
-# Instead, surround them with single quotes.
-#
-# en:
-#   'true': 'foo'
-#
-# To learn more, please read the Rails Internationalization guide
-# available at http://guides.rubyonrails.org/i18n.html.
+
 
 en:
 
@@ -146,6 +117,19 @@ en:
     services:
       s_title: "Services" 
       p_text: "We supply our customers with graphic design including preprinting works, 3d rendering, constructional 3d modelling with drawings (SolidWorks), molding tool modelling, product samples on demand ( depending on a product). "
+    
+    catalog:
+      ctitle: "Main catalog"
+      csubtitle: "General products list"
+
+    contacts:
+      like: "We will like to hear from you.  "
+      address: "Address"
+      kyiv: "Kyiv"
+      ukraine: "Ukraine"
+      contact: "Phone, email, messengers"
+      enqmail: "You can send your quotes on email or any messenger"
+      inqform: "Inquiry Form"
 
   users:
     registrations:
