--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -132,7 +132,17 @@ ru:
       contact: "Телефон, email, мессенджеры"
       enqmail: "Можно также присылать запросы по электронной почте, мессенджерам"
       inqform: "Форма для запроса"
-      
+      place: "Оставьте свой запрос здесь"
+      first_name: "Имя"
+      last_name: "Фамилия"
+      subject: "Тема"
+      message: "Запрос"
+      details: "Спецификации запроса"
+      mailing: "Укажите свой  email"
+      submit: "Отправить"
+      about: "О нас "
+      about_p: "Мы разрабатываем и производим блистерную упаковку разных форм для широкого спектра продукции, контейнеры, ланч-боксы, суши-боксы. Мы практикуем индивидуальный подход, подбираем оптимальную по цене и характеристикам форму упаковки, консультируем, как результат вы получаете оптимальный по цене дизайн и качественную упаковку со своим логотипом "
+
   users:
     registrations:
       edit:
