--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -142,6 +142,20 @@ ru:
       submit: "Отправить"
       about: "О нас "
       about_p: "Мы разрабатываем и производим блистерную упаковку разных форм для широкого спектра продукции, контейнеры, ланч-боксы, суши-боксы. Мы практикуем индивидуальный подход, подбираем оптимальную по цене и характеристикам форму упаковки, консультируем, как результат вы получаете оптимальный по цене дизайн и качественную упаковку со своим логотипом "
+    
+    acryllic:
+      atitle: " Акриловые дисплеи"
+      shelves: "Полочные дисплеи"
+      cosmetics: "Акриловые подставки под косметику"
+      booklets: "Подставки под буклеты"
+
+    gallery:
+      gtitle: "Примеры изделий для наших заказчиков"
+      view: "Галерея:"
+      find: "Найдите свое"
+      design: " дизайнерское решение"
+      zview: "Подробнее"
+      infostands: "Инфо/продуктовые стойки"
 
   users:
     registrations:
