--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -135,11 +135,25 @@ en:
       last_name: "Last name"
       subject: "Subject"
       message: "Message"
-      details: Write inquiring details here"
+      details: "Write inquiring details here"
       mailin: "Type your email address"
       submit: "Submit"
       about: "About Us "
       about_p: "We develop and produce plastic packaging of any shape and complexity, for a wide range of goods, containers, lunch boxes, sushi boxes.  Our production is characterized by an individual approach, we can select the optimal form of packaging material, attractive and optimized design, with your company logo.  "
+
+    acryllic:
+      atitle: " Acryllic stands"
+      shelves: "Acryllic displays of 2-3 shelves"
+      cosmetics: "Acryllic stand for cosmetics"
+      booklets: "Stands for booklets"
+
+    gallery:
+      gtitle: "Examples of products made for customers"
+      view: "View the Gallery"
+      find: "Find your solution"
+      design: " for design"
+      zview: "View"
+      infostands: "Info/products stands"
 
   users:
     registrations:
