--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -33,6 +33,10 @@ ru:
     index:
       title: "Продукция"
       add_html: "В корзину"
+      show: "Показать продукт"
+      delete: "Удалить продукт"
+      edit: "Редактировать продукт"
+      new: "Новый продукт"
   
   carts:
     cart:
@@ -160,6 +164,24 @@ ru:
       lightbox: "Лайтбокс"
       moldtray: "Формованный трей"
       metalrack: "Металлический стеллаж"
+
+    racks:
+      rtitle: "Торговые стеллажи из сварной стальной трубы, проволоки и сетки"
+      prod: "Продукция из металла"
+      custom: "Металлические стеллажи "
+      and: "и "
+      metal: "Проволочные дисплеи "
+      wired: "под заказ"
+      description: "Мы давно разрабатываем и производим стеллажи и проволочные дисплеи под заказ с полимерной покраской в цветах RAL"
+      goproducts: "В каталог продукции"
+      mpr: "Продукция из металла: стеллажи"
+      shelves: "Полочный дисплей"
+      wirestand: "Проволочная подставка"
+      shheader: "Проволочная полка- паразит "
+      rack: "Стеллаж"
+      hook: "Проволочный дисплей-паразит с крючками"
+      mesh: "Торговый стенд из сетки"
+      mdispenser: "Металлический раздатчик"
 
   users:
     registrations:
