--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -43,6 +43,7 @@ en:
       title: "Your Cart"
       empty: "Empty Cart"
       checkout: "Checkout"
+      total: "Total"
 
   number:
     currency: 
