I18n translations and order/cart fix

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -56,7 +56,8 @@ en:
 
   orders:
     new:
-      legend: "Please enter your detais"
+      title: "New Order"
+      legend: "Please enter your details"
     form:
       name: "Name"
       address: "Address"
