--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -56,6 +56,7 @@ ru:
 
   orders:
     new:
+      title: "Новый заказ"
       legend: "Пожалуйста укажите контактные данные"
     form:
       name: "Имя"
