order I18n fix and form

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -58,6 +58,7 @@ en:
     new:
       title: "New Order"
       legend: "Please enter your details"
+      checkout: "Checkout"
     form:
       name: "Name"
       address: "Address"
