--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -58,6 +58,7 @@ ru:
     new:
       title: "Новый заказ"
       legend: "Пожалуйста укажите контактные данные"
+      checkout: "Подтвердить"
     form:
       name: "Имя"
       address: "Адрес"
