I18n translations order mailer

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -215,4 +215,16 @@ en:
       links:
         forgot: "Forgot your password?"
 
+  order_mailer:
+    received:
+      subject: "Your order is received and at work"
+      title: "Hello, we received your order and will get back to you soon with production and shipping details."
+      thank: "Thank you for your recent order at Rkraftcomua.
+             You ordered the following items:"
+      separate: "We will send you a separate email when your order ships."
+    shipped:
+      subject: "Your order is shipped. Please confirm the reception"
+
+
+
 
