--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -226,6 +226,15 @@ ru:
     shared:
       links:
         forgot: "Забыли пароль?"
+
+  order_mailer:
+    received:
+      subject: "Ваш заказ получен и принят в работу"
+      title: "Добрый день! Мы получили ваш заказ и скоро уточним детали производства и доставки!"
+      thank: "Благодарим за последний заказ в Rkraftcomua! 
+              Вы заказали следующие изделия:"
+      separate: "Мы вышлем вам отдельное письмо о состоянии производтва и доставки"
+    shipped:
+      subject: "Ваш заказ доставлен.Пожалуйста, подтвердите получение"  
     
- 
  
