--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -230,7 +230,8 @@ ru:
   order_mailer:
     received:
       subject: "Ваш заказ получен и принят в работу"
-      title: "Добрый день! Мы получили ваш заказ и скоро уточним детали производства и доставки!"
+      title: "Ваш заказ получен!"
+      message: "Добрый день! Мы получили ваш заказ и скоро уточним детали производства и доставки!"
       thank: "Благодарим за последний заказ в Rkraftcomua! 
               Вы заказали следующие изделия:"
       separate: "Мы вышлем вам отдельное письмо о состоянии производтва и доставки"
