--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -6,6 +6,7 @@ ru:
     application: 
       title: "Rkraftcomua"
       home: "Главная"
+      menu: "Меню"
       catalog: "Каталог"
       services: "Услуги"
       contacts: "Контакты"
@@ -28,6 +29,9 @@ ru:
       where: "Где нас найти"
       gocontacts: "Смотреть контакты, карту, оставить запрос"
       gallery: "Галерея"
+      shop: "Магазин и корзина"
+      prods: "Продукты"
+      userarea: "Профиль Пользователя"
 
   products:
     index:
@@ -155,7 +159,7 @@ ru:
       subject: "Тема"
       message: "Запрос"
       details: "Спецификации запроса"
-      mailing: "Укажите свой  email"
+      mailin: "Укажите свой  email"
       submit: "Отправить"
       about: "О нас "
       about_p: "Мы разрабатываем и производим блистерную упаковку разных форм для широкого спектра продукции, контейнеры, ланч-боксы, суши-боксы. Мы практикуем индивидуальный подход, подбираем оптимальную по цене и характеристикам форму упаковки, консультируем, как результат вы получаете оптимальный по цене дизайн и качественную упаковку со своим логотипом "
